--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,14 @@ button,
 select {
   font: inherit;
   margin-bottom: 1em;
+  cursor: pointer;
 }
 
 header {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   background-color: purple;
   color: whitesmoke;
   position: sticky;
@@ -85,6 +86,10 @@ article {
 
 h1 {
   font-size: 3.5rem;
+}
+
+h1 a {
+  color: white;
 }
 
 h2 {
